fixed bug overlapping documentation

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,8 +6,8 @@
 
 body {
     height: 100vh;
-    width: 100%;
-    margin-left: 150px;
+    width: calc(100vh - 20px);
+    margin: 20px 20px;
 }
 
 /* .container {
@@ -22,6 +22,10 @@ body {
     box-shadow: #00000059 0px 5px 15px;
 } */
 
+.main-container {
+    justify-content: center;
+}
+
 .section {
     position: absolute;
     background-color: #ffffff;
@@ -33,6 +37,7 @@ body {
     align-items: center;
     box-shadow: #00000059 0px 5px 15px;
 }
+
 
 .col {
     width: 100%;
@@ -114,9 +119,6 @@ input[type=number] {
     cursor: pointer;
 }
 
-/* .documentation {
-    margin: 100px;
-}
 
 ol {
     counter-reset: item;
@@ -144,4 +146,4 @@ span {
     color: black;
     font-weight: bold;
     text-decoration: dotted;
-} */
+}
